{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 667,
  "lineage": "adcd3261-4f7e-07e5-f31c-ec821e8cfa61",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prueba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa2b7722dc1b5612",
            "arn": "arn:aws:ec2:us-east-1:406235964731:instance/i-0f56de1d188051427",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f56de1d188051427",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af0be47da2a5aa99",
            "private_dns": "ip-10-0-2-36.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.36",
            "public_dns": "ec2-54-80-70-62.compute-1.amazonaws.com",
            "public_ip": "54.80.70.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09117c433285eb49d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014ba9218d475eb93",
            "tags": {
              "Name": "prueba"
            },
            "tags_all": {
              "Name": "prueba"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-030af237c049271d9"
            ]
          },
          "dependencies": [
            "aws_db_instance.db-practico-3tier",
            "aws_db_subnet_group.db-subnet-practico-3tier",
            "aws_security_group.mysql_sg",
            "aws_security_group.ssh-http-access",
            "aws_subnet.subnet1-practico-3tier",
            "aws_subnet.subnet2-practico-3tier",
            "aws_vpc.vpc-practico-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-server01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa2b7722dc1b5612",
            "arn": "arn:aws:ec2:us-east-1:406235964731:instance/i-05901e1364a9b4a65",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05901e1364a9b4a65",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-072b971290316f3b9",
            "private_dns": "ip-10-0-1-181.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.181",
            "public_dns": "ec2-3-93-163-115.compute-1.amazonaws.com",
            "public_ip": "3.93.163.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00c23e4b4286c06dc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3a9df04ccc10d4d",
            "tags": {
              "Name": "webapp-server01"
            },
            "tags_all": {
              "Name": "webapp-server01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-030af237c049271d9"
            ]
          },
          "dependencies": [
            "aws_db_instance.db-practico-3tier",
            "aws_db_subnet_group.db-subnet-practico-3tier",
            "aws_security_group.mysql_sg",
            "aws_security_group.ssh-http-access",
            "aws_subnet.subnet1-practico-3tier",
            "aws_subnet.subnet2-practico-3tier",
            "aws_vpc.vpc-practico-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-server02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa2b7722dc1b5612",
            "arn": "arn:aws:ec2:us-east-1:406235964731:instance/i-0e5f43f549cdb182f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5f43f549cdb182f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06cc84a1675eae2b9",
            "private_dns": "ip-10-0-2-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.6",
            "public_dns": "ec2-35-171-165-180.compute-1.amazonaws.com",
            "public_ip": "35.171.165.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e144ccdce607ed39",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014ba9218d475eb93",
            "tags": {
              "Name": "webapp-server02"
            },
            "tags_all": {
              "Name": "webapp-server02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-030af237c049271d9"
            ]
          },
          "dependencies": [
            "aws_db_instance.db-practico-3tier",
            "aws_db_subnet_group.db-subnet-practico-3tier",
            "aws_security_group.mysql_sg",
            "aws_security_group.ssh-http-access",
            "aws_subnet.subnet1-practico-3tier",
            "aws_subnet.subnet2-practico-3tier",
            "aws_vpc.vpc-practico-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "inetgw-practico-3tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406235964731:internet-gateway/igw-0027c7b4335131db5",
            "id": "igw-0027c7b4335131db5",
            "owner_id": "406235964731",
            "tags": {
              "Name": "inetgw-practico-3tier"
            },
            "tags_all": {
              "Name": "inetgw-practico-3tier"
            },
            "vpc_id": "vpc-05833fde2acc66160"
          },
          "dependencies": [
            "aws_vpc.vpc-practico-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:406235964731:loadbalancer/app/ALB/73485a931938317a",
            "arn_suffix": "app/ALB/73485a931938317a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-624695260.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:406235964731:loadbalancer/app/ALB/73485a931938317a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-030af237c049271d9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-014ba9218d475eb93"
              },
              {
                "subnet_id": "subnet-0d3a9df04ccc10d4d"
              }
            ],
            "subnets": [
              "subnet-014ba9218d475eb93",
              "subnet-0d3a9df04ccc10d4d"
            ],
            "tags": {
              "Name": "ALB"
            },
            "tags_all": {
              "Name": "ALB"
            },
            "vpc_id": "vpc-05833fde2acc66160",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ssh-http-access",
            "aws_subnet.subnet1-practico-3tier",
            "aws_subnet.subnet2-practico-3tier",
            "aws_vpc.vpc-practico-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener-practico3tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:406235964731:listener/app/ALB/73485a931938317a/c573a74a3d02bb1d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:406235964731:targetgroup/targetgroup/3fbc7d95b0bd72c8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:406235964731:listener/app/ALB/73485a931938317a/c573a74a3d02bb1d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:406235964731:loadbalancer/app/ALB/73485a931938317a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB",
            "aws_lb_target_group.targetgroup-practico3-3tier",
            "aws_security_group.ssh-http-access",
            "aws_subnet.subnet1-practico-3tier",
            "aws_subnet.subnet2-practico-3tier",
            "aws_vpc.vpc-practico-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetgroup-practico3-3tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:406235964731:targetgroup/targetgroup/3fbc7d95b0bd72c8",
            "arn_suffix": "targetgroup/targetgroup/3fbc7d95b0bd72c8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:406235964731:targetgroup/targetgroup/3fbc7d95b0bd72c8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "targetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05833fde2acc66160"
          },
          "dependencies": [
            "aws_vpc.vpc-practico-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-practico-3tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406235964731:route-table/rtb-098e889758677b24d",
            "id": "rtb-098e889758677b24d",
            "owner_id": "406235964731",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0027c7b4335131db5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05833fde2acc66160"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.inetgw-practico-3tier",
            "aws_vpc.vpc-practico-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_rt_asociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bed24d23fba6ffe8",
            "route_table_id": "rtb-098e889758677b24d",
            "subnet_id": "subnet-0d3a9df04ccc10d4d"
          },
          "dependencies": [
            "aws_internet_gateway.inetgw-practico-3tier",
            "aws_route_table.route-table-practico-3tier",
            "aws_subnet.subnet1-practico-3tier",
            "aws_vpc.vpc-practico-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_rt_asociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e057432287bbeba8",
            "route_table_id": "rtb-098e889758677b24d",
            "subnet_id": "subnet-014ba9218d475eb93"
          },
          "dependencies": [
            "aws_internet_gateway.inetgw-practico-3tier",
            "aws_route_table.route-table-practico-3tier",
            "aws_subnet.subnet2-practico-3tier",
            "aws_vpc.vpc-practico-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406235964731:security-group/sg-0f4ed1fbeeaa35406",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4ed1fbeeaa35406",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql-sg",
            "name_prefix": "",
            "owner_id": "406235964731",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05833fde2acc66160"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-practico-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-http-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406235964731:security-group/sg-030af237c049271d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030af237c049271d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ssh-http-access",
            "name_prefix": "",
            "owner_id": "406235964731",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05833fde2acc66160"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-practico-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-practico-3tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406235964731:subnet/subnet-0d3a9df04ccc10d4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3a9df04ccc10d4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "406235964731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1-practico-3tier"
            },
            "tags_all": {
              "Name": "subnet1-practico-3tier"
            },
            "vpc_id": "vpc-05833fde2acc66160"
          },
          "dependencies": [
            "aws_vpc.vpc-practico-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-practico-3tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406235964731:subnet/subnet-014ba9218d475eb93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014ba9218d475eb93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "406235964731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2-practico-3tier"
            },
            "tags_all": {
              "Name": "subnet2-practico-3tier"
            },
            "vpc_id": "vpc-05833fde2acc66160"
          },
          "dependencies": [
            "aws_vpc.vpc-practico-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-practico-3tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406235964731:vpc/vpc-05833fde2acc66160",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7ff322c18f3fe19",
            "default_route_table_id": "rtb-006166cec434ffb04",
            "default_security_group_id": "sg-0b59e83b8399c44c8",
            "dhcp_options_id": "dopt-09529e1cd732d91ca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05833fde2acc66160",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006166cec434ffb04",
            "owner_id": "406235964731",
            "tags": {
              "Name": "vpc-practico-3tier"
            },
            "tags_all": {
              "Name": "vpc-practico-3tier"
            }
          }
        }
      ]
    }
  ]
}